--- a/Module 1/Activity - 36/T02.06-Exercise-AddPolish/app/build.gradle
+++ b/Module 1/Activity - 36/T02.06-Exercise-AddPolish/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
 
     defaultConfig {
-        applicationId "com.android.example.favoritetoys"
+        applicationId "com.example.android.datafrominternet"
         minSdkVersion 10
         targetSdkVersion 25
         versionCode 1
@@ -20,7 +20,4 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:25.1.0'
-
-    // TODO (7) Remove the ConstraintLayout dependency as we aren't using it for these simple projects
-    implementation 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 }
